--- a/mygallery/templates/navbar.html
+++ b/mygallery/templates/navbar.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    
+   
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-light" id="navMain" >
+        <div class="container navigation header_right wow fadeInLeft animated animated" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft justify-content-center;">
+
+        <ul class="navbar-nav">
+          <li class="nav-item" color="red">
+            <a class="nav-link" href="/">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/#category">CATEGORY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link open-nav" style="cursor:pointer">LOCATION</a>
+          </li>
+        </ul>
+      </nav>
+      <div>
+          
+
+      </div>
     
 </body>
 </html>
