--- a/mygallery/static/css/index.css
+++ b/mygallery/static/css/index.css
@@ -89,5 +89,19 @@ form>input:hover{
 #link:hover{
     background-color: blue;
 }
+.hovereffect{
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+.hovereffect img{
+    display: block;
+    position: relative;
+}
+.portfolio-wrap{
+    padding: 0 4px;
+}
 
 
