--- a/mygallery/templates/search.html
+++ b/mygallery/templates/search.html
@@ -44,12 +44,12 @@
              </div>
         {% empty %}
     </div>
-    <div class="row">
+    <div class="row sorry1">
         <div class="col-sm-6 col-md-6 col-lg-6">
-            <img src="{% static 'images/sorry.png' %}" alt="" class = "oops">
+            <img src="https://www.goodmorninghdloveimages.com/wp-content/uploads/2020/05/Sorry-Images-Free-Download-For-Whatsapp.jpg" alt="" class = "oops">
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6">
-            <h2 class="text-center"> Sorry no image for {{message}} category. Images are comming soon.</h2>
+            <h2 class="text-center" id="sorry"> Sorry no image for {{message}} category. Images are comming soon.</h2>
         </div>
     </div>
     {% endfor %}
@@ -96,4 +96,3 @@
 
 {% endblock %}
 
-{%endblock%}
