--- a/mygallery/templates/single.html
+++ b/mygallery/templates/single.html
@@ -53,7 +53,10 @@
              <div class="portfolio-wrap ">
                  <div class="portfolio-wrap hovereffect">
                      <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width:100%" >
-                         <img src="{{image.picture.cdn_url}}" href="" class="image" alt="Image" >
+                        <img src="{{image.picture.cdn_url}}" href="" class="image" alt="Image" >
+                         <!-- <img src= {% if image.my_picture %} {{image.my_picture.url}} {%else%}#{% endif %} alt="Image" class="img-responsive"> -->
+
+
                          <div class="overlay">
                              <h4>
                                  <a href="/image/{{image.image_category.name}}/{{image.id}}">
