editing url for displaying images

--- a/mygallery/static/css/index.css
+++ b/mygallery/static/css/index.css
@@ -118,6 +118,10 @@ div.modal-content{
 .sorry1{
     background-color: whitesmoke;
 }
+#display5{
+    position: relative;
+    top: 15px;
+}
 
 
 
