--- a/mygallery/templates/index.html
+++ b/mygallery/templates/index.html
@@ -88,11 +88,11 @@
       <div class="row">
       {% for image in images %}
           <!-- displaying images -->
-           <div class="col-xs-6 col-sm-6  col-md-4 col-lg-3">
+           <div class="col-xs-6 col-sm-6  col-md-4 col-lg-3" id="display5">
                    <div class="portfolio-wrap ">
                        <div class="portfolio-wrap hovereffect">
                            <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width:100%">
-                            <img src="{{image.picture.cdn_url}}" href="" class="image" alt="Image" >
+                            <img src= {% if image.picture %} {{image.picture.url}} {%else%}#{% endif %} alt="Image" class="img-responsive" height="200px" width="250px">
                                <div class="overlay">
                                    <h4>{{image.name}}</h4>
                                </div>
