--- a/mygallery/templates/search.html
+++ b/mygallery/templates/search.html
@@ -30,11 +30,11 @@
     <div class="row">
     {% for image in images %}
         <!-- displaying images -->
-         <div class="col-xs-6 col-sm-6  col-md-4 col-lg-3">
+         <div class="col-xs-6 col-sm-6  col-md-4 col-lg-3" id="display5" >
                  <div class="portfolio-wrap ">
                      <div class="portfolio-wrap hovereffect">
                          <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width:100%">
-                             <img src="{{image.picture.cdn_url}}" href="" class="image" alt="Image" >
+                            <img src= {% if image.picture %} {{image.picture.url}} {%else%}#{% endif %} alt="Image" class="img-responsive" height="200px" width="250px">
                              <div class="overlay">
                                  <h4>{{image.name}}</h4>
                              </div>
@@ -72,9 +72,9 @@
                             </div>
                             <div class="col-md-3">
                                 <h4>Location</h4>
-                                <p>{{image.image_location.name}}</p>
+                                <p>{{image.picture_location.name}}</p>
                                 <h4>Category</h4>
-                                <p>{{image.image_category.name}}</p>
+                                <p>{{image.picture_category.name}}</p>
                             </div>
                             <div>
                                 <h2 class="desc">{{image.name}}</h2>
