--- a/mygallery/templates/index.html
+++ b/mygallery/templates/index.html
@@ -24,7 +24,7 @@
 
 
 </head>
-<body>
+<body id="body1" >
 
    {% include "navbar.html" %}
     {% block content %}
@@ -83,7 +83,7 @@
       </div>
   
     </div>
-    <div class="container wrap">
+    <div class="container wrap" id="hide" >
       <!-- Looping through images -->
       <div class="row">
       {% for image in images %}
@@ -99,7 +99,7 @@
                            </a>
                        </div>
                    </div>
-               </div>
+            </div>
           {% empty %}
       </div>
       <div class="notificaton">
@@ -109,8 +109,8 @@
   
       <!-- looping through image details modal class -->
       {% for image in images %}
-          <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
+          <div class="modal fade hide3" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true" >
+              <div class="modal-dialog" role="document" >
                   <div class="modal-content">
                       <div class="modal-header">
                           <h5 class="modal-title" id="deleteModalLabel">Image Post</h5>
@@ -143,7 +143,42 @@
               </div>
           </div>
       {% endfor %}
-  </div>
+  </div>  
+
+  <button class="body2">btn</button>
+  {% for image in images %}
+   <div>
+       <div>
+           <h5>Image Post</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+           </button>
+           <div class="modal-body">
+               <div class="row">
+                   <div class="col-md-9 col-lg-9">
+                    <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img id="img{{image.id}}" src="{{image.picture.cdn_url}}" class="img-thumbnail" alt="Image" style="cursor:pointer"></a>
+                   </div>
+                   <div class="col-md-3">
+                        <h4>Location</h4>
+                        <p>{{image.image_location.name}}</p>
+                        <h4>Category</h4>
+                        <p>{{image.image_category.name}}</p>
+                   </div>
+                    <div>
+                         <h2 class="desc">{{image.name}}</h2>
+                         <p class="desc">{{image.description}}</p>
+                    </div>
+               </div>
+           </div>
+                 <div class="modal-footer">
+                 <button type="button" class="btn btn-secondary" onclick="copy('img{{image.id}}')">Copy Link</button>
+                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+           </div>
+
+
+       </div>
+   </div>
+  {% endfor %}
   
   
 
