--- a/mygallery/templates/index.html
+++ b/mygallery/templates/index.html
@@ -94,7 +94,7 @@
                            <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width:100%">
                             <img src= {% if image.picture %} {{image.picture.url}} {%else%}#{% endif %} alt="Image" class="img-responsive" height="200px" width="250px">
                                <div class="overlay">
-                                   <h4>{{image.name}}</h4>
+                                   <h4 id="name" >{{image.name}}</h4>
                                </div>
                            </a>
                        </div>
@@ -108,45 +108,8 @@
       {% endfor %}
   
       <!-- looping through image details modal class -->
-      {% for image in images %}
-          <div class="modal fade hide3" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true" >
-              <div class="modal-dialog" role="document" >
-                  <div class="modal-content">
-                      <div class="modal-header">
-                          <h5 class="modal-title" id="deleteModalLabel">Image Post</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                          </button>
-                      </div>
-                      <div class="modal-body">
-                          <div class="row">
-                              <div class="col-md-9 col-lg-9">
-                                  <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img id="img{{image.id}}" src="{{image.picture.cdn_url}}" class="img-thumbnail" alt="Image" style="cursor:pointer"></a>
-                              </div>
-                              <div class="col-md-3">
-                                  <h4>Location</h4>
-                                  <p>{{image.image_location.name}}</p>
-                                  <h4>Category</h4>
-                                  <p>{{image.image_category.name}}</p>
-                              </div>
-                              <div>
-                                  <h2 class="desc">{{image.name}}</h2>
-                                  <p class="desc">{{image.description}}</p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" onclick="copy('img{{image.id}}')">Copy Link</button>
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      {% endfor %}
-  </div>  
-
-  <button class="body2">btn</button>
-  {% for image in images %}
+      
+  <!-- {% for image in images %}
    <div>
        <div>
            <h5>Image Post</h5>
@@ -180,7 +143,7 @@
    </div>
   {% endfor %}
   
-  
+   -->
 
 </body>
 </html>
